# ruft

./: Cargo.toml
.github/workflows/: ci.yml  rust.yml
examples/: Cargo.toml  client.rs
ruft-2/: log
ruft-client/: Cargo.toml
ruft-client/src/: lib.rs  protocol.rs
ruft-client/src/relay/: broker.rs  connector.rs  mod.rs  protocol.rs  service.rs  tcp.rs
ruft-server/: Cargo.toml
ruft-server/src/: lib.rs  main.rs
ruft-server/src/automata/: candidate.rs  follower.rs  fsm.rs  leader.rs  mod.rs  protocol.rs
ruft-server/src/automaton/: candidate.rs  follower.rs  leader.rs  mod.rs
ruft-server/src/cluster/: connection.rs  mod.rs  protocol.rs  tcp.rs
ruft-server/src/network/: connection.rs  mod.rs  tcp.rs
ruft-server/src/protocol/: mod.rs
ruft-server/src/relay/: connection.rs  mod.rs  protocol.rs  tcp.rs
ruft-server/src/storage/: durable.rs  file.rs  memory.rs  mod.rs  volatile.rs
ruft-tests/: Cargo.toml
ruft-tests/tests/: integration_tests.rs
