[package]
name = "ruft-client"
version = "0.0.1"
description = "Ruft Client"
authors = ["Grzegorz Gierlach <gierlachg@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.23"
derive_more = "0.99.11"

log = "0.4.11"
log4rs = "1.0.0"

bytes = "1.0.1"

tokio = { version = "1.2.0", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"] }
futures = "0.3.12"