[package]
name = "ruft-client"
version = "0.0.1"
description = "Ruft Client"
authors = ["Grzegorz Gierlach <gierlachg@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "^1"
derive_more = "^0.99"

log = "^0.4"
log4rs = "^1"

bytes = "^1"

tokio = { version = "^1", features = ["full"] }
tokio-util = { version = "^0.6", features = ["full"] }
tokio-stream = "^0.1"
futures = "^0.3"