[package]
name = "ruft-server"
version = "0.0.1"
description = "Ruft Server"
authors = ["Grzegorz Gierlach <gierlachg@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"

derive_more = "0.99.10"

log = "0.4.11"
log4rs = "0.13.0"

async-trait = "0.1.42"

rand = "0.8.0"

bytes = "1.0.1"

tokio = { version = "1.1.1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = "0.1.2"
futures = "0.3.12"

[dev-dependencies]
mockall = "0.8.3"
lazy_static = "1.4.0"