[package]
name = "ruft-server"
version = "0.0.1"
description = "Ruft Server"
authors = ["Grzegorz Gierlach <gierlachg@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"

derive_more = "0.99.11"

log = "0.4"
log4rs = "1"

async-trait = "0.1"

rand = "0.8"

bytes = "1"

serde = "1"
bincode = "1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
mockall = "0.8"
lazy_static = "1"