[package]
name = "ruft-server"
version = "0.0.1"
description = "Ruft Server"
authors = ["Grzegorz Gierlach <gierlachg@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2.33.3"

derive_more = "0.99.11"

tracing = "0.1"
tracing-subscriber = "0.2"

async-trait = "0.1"

rand = "0.8"

bytes = "1"

serde = { version = "1", features = ["serde_derive"] }
bincode = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
tokio-util = { version = "0.6", features = ["net", "codec"] }
tokio-uring = "0.1"
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
mockall = "0.8"
lazy_static = "1"